--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -24,7 +24,7 @@
     <!--Install Fragment-->
     <string name="auto_detect">(Auto) %1$s</string>
     <string name="cannot_auto_detect">(Auto détection impossible)</string>
-    <string name="boot_image_title">Emplacement de l\'Image Boot</string>
+    <string name="boot_image_title">Emplacement de l\'image Boot</string>
     <string name="detect_button">Détection</string>
     <string name="advanced_settings_title">Paramètres avancés</string>
     <string name="keep_force_encryption">Garder le chiffrement forcé</string>
@@ -148,7 +148,7 @@
 	<string name="settings_update_stable">Stable</string>
 	<string name="settings_update_beta">Beta</string>
 	<string name="settings_boot_format_title">Format de sortie du boot patché</string>
-	<string name="settings_boot_format_summary">Sélectionner le format de \'image boot patchée finale.\nChoisir .img pour flasher via fastboot/mode download ; chosiir .img.tar pour flasher via ODIN.</string>
+	<string name="settings_boot_format_summary">Sélectionner le format de l\'image boot patchée finale.\nChoisir .img pour flasher via fastboot/mode download ; choisir .img.tar pour flasher via ODIN.</string>
 	<string name="settings_su_reauth_title">Ré-authentifier après mise à jour</string>
 	<string name="settings_su_reauth_summary">Ré-authentifier les permissions superuser après les mises à jour d\'une application</string>
 	<string name="multiuser_mode">Mode multi-utilisateurs</string>
