--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -11,7 +11,6 @@
 
     <!--Status Fragment-->
     <string name="magisk_version_error">未安装 Magisk</string>
-
     <string name="checking_for_updates">正在检查更新…</string>
     <string name="magisk_update_available">Magisk 可更新到 v%1$s！</string>
     <string name="cannot_check_updates">无法检查更新，没有网络连接？</string>
@@ -20,6 +19,7 @@
     <string name="safetyNet_check_text">点击启动 SafetyNet 检查</string>
     <string name="checking_safetyNet_status">正在检查 SafetyNet 状态…</string>
     <string name="safetyNet_check_success">SafetyNet 检查成功</string>
+    <string name="safetyNet_api_error">SafetyNet API 错误</string>
     <string name="safetyNet_network_loss">网络连接不可用</string>
     <string name="safetyNet_service_disconnected">服务已被取消</string>
     <string name="safetyNet_res_invalid">回传值无效</string>
@@ -36,6 +36,7 @@
     <string name="install_magisk_title">最新的 Magisk 版本：%1$s</string>
     <string name="uninstall">卸载</string>
     <string name="uninstall_magisk_title">卸载 Magisk</string>
+    <string name="uninstall_magisk_msg">所有模块将会被停用 / 删除。root会被移除，并有可能在目前数据未加密的情况下被加密</string>
     <string name="update">更新 %1$s</string>
 
     <!--Module Fragment-->
@@ -54,12 +55,12 @@
     <string name="not_installed">未安装</string>
 
     <!--Log Fragment-->
-    <string name="menuSaveToSd">保存到 SD 卡</string>
-    <string name="menuReload">重载</string>
+    <string name="menuSaveToSd">保存到内置存储</string>
+    <string name="menuReload">刷新</string>
     <string name="menuClearLog">清除日志</string>
     <string name="logs_cleared">日志已成功清除</string>
     <string name="log_is_empty">日志为空</string>
-    <string name="logs_save_failed">无法将日志写入 SD 卡：</string>
+    <string name="logs_save_failed">无法将日志写入内置存储：</string>
 
     <!--About Activity-->
     <string name="about">关于</string>
@@ -74,10 +75,10 @@
     <string name="support_thread">支持主题</string>
 
     <!--Toasts, Dialogs-->
-    <string name="permissionNotGranted">未授予写入外置存储权限，此功能无法正常工作。</string>
+    <string name="permissionNotGranted">未授予写入内置存储权限，此功能无法正常工作。</string>
     <string name="no_thanks">不，谢谢</string>
     <string name="yes">是</string>
-    <string name="ok">确定</string>
+    <string name="ok">好</string>
     <string name="close">关闭</string>
     <string name="repo_install_title">安装 %1$s</string>
     <string name="repo_install_msg">你想要立即安装 %1$s 吗？</string>
@@ -86,7 +87,6 @@
     <string name="install_error">安装出错！</string>
     <string name="invalid_zip">此 zip 文件不是 Magisk 模块！！</string>
     <string name="reboot">重启</string>
-    <string name="zip_process_msg">正在处理 zip 文件 …</string>
     <string name="downloading_toast">正在下载 %1$s</string>
     <string name="magisk_update_title">Magisk 可更新！</string>
     <string name="settings_reboot_toast">重启以应用设置</string>
@@ -94,8 +94,11 @@
     <string name="repo_cache_cleared">资源库缓存已清除</string>
     <string name="safetyNet_hide_notice">此应用使用了 SafetyNet\n已默认由 MagiskHide 处理</string>
     <string name="process_error">处理失败</string>
-    <string name="internal_storage">Zip 已被储存到：\n[内部存储]%1$s</string>
+    <string name="internal_storage">Zip 已被储存到：\n[内部存储空间]%1$s</string>
+    <string name="zip_download_title">正在下载</string>
+    <string name="zip_download_msg">正在下载 Zip 文件（%1$d%%）…</string>
     <string name="zip_process_title">正在处理</string>
+    <string name="zip_process_msg">正在处理 zip 文件 …</string>
     <string name="manual_boot_image">请手动选择 Boot 镜像位置！</string>
     <string name="manager_update_title">Magisk Manager 有更新！</string>
     <string name="manager_download_install">点击以下载并安装</string>
@@ -104,25 +107,38 @@
     <string name="hide_manager_toast">正在隐藏 Magisk Manager…</string>
     <string name="hide_manager_fail_toast">隐藏 Magisk Manager 失败…</string>
     <string name="download_zip_only">仅下载 Zip</string>
-    <string name="patch_boot_file">给 Boot 镜像文件打补丁</string>
+    <string name="patch_boot_file">修补 Boot 镜像文件</string>
     <string name="direct_install">直接安装（推荐）</string>
-    <string name="select_method">选择方法</string>
+    <string name="install_second_slot">安装到第二分区（安装完OTA后）</string>
+    <string name="select_method">选择安装方法</string>
+    <string name="no_boot_file_patch_support">目标安装版本不支持修补 Boot 镜像文件</string>
+    <string name="boot_file_patch_msg">选择原厂 Boot 镜像备份；支持 .img 以及 .img.tar 格式</string>
+    <string name="complete_uninstall">完全卸载</string>
+    <string name="restore_stock_boot">还原原厂 Boot 镜像</string>
+    <string name="restore_done">还原完成！</string>
+    <string name="restore_fail">原厂 Boot 镜像备份不存在！</string>
+    <string name="uninstall_toast">将在 5 秒内卸载 Magisk Manager，接下来请手动重新启动</string>
+    <string name="proprietary_title">下载专有代码</string>
+    <string name="proprietary_notice">Magisk Manager 是一个 100% 开源的应用，因此不会包含 Google 专有的 SafetyNet API 代码。\n\n你允许 Magisk Manager 下载一个扩展（包含 GoogleApiClient）用于 SafetyNet 检查吗？</string>
 
     <!--Settings Activity -->
     <string name="settings_general_category">常规</string>
     <string name="settings_dark_theme_title">深色主题</string>
     <string name="settings_dark_theme_summary">使用深色主题</string>
     <string name="settings_notification_title">更新通知</string>
-    <string name="settings_notification_summary">当有新版本可用时显示更新通知</string>
-    <string name="settings_clear_cache_title">清除资源库缓存</string>
-    <string name="settings_clear_cache_summary">清除已缓存的在线资源库信息，强制刷新在线数据</string>
+    <string name="settings_notification_summary">当有新版本时显示更新通知</string>
+    <string name="settings_clear_cache_title">清除仓库缓存</string>
+    <string name="settings_clear_cache_summary">清除已缓存的在线仓库信息，强制刷新在线数据</string>
     <string name="settings_hide_manager_title">隐藏 Magisk Manager</string>
-    <string name="settings_hide_manager_summary">临时隐藏 Magisk Manager。\n此功能将会安装一个名为“Unhide Magisk Manager（取消隐藏 Magisk Manager）”的新应用。</string>
+    <string name="settings_hide_manager_summary">暂时隐藏 Magisk Manager。\n这将会安装一个应用“Unhide Magisk Manager”用以恢复显示。</string>
     <string name="language">语言</string>
     <string name="system_default">（系统默认）</string>
+    <string name="settings_update">更新设定</string>
     <string name="settings_update_channel_title">更新通道</string>
     <string name="settings_update_stable">稳定版</string>
     <string name="settings_update_beta">测试版</string>
+    <string name="settings_boot_format_title">已修补的 Boot 镜像输出格式</string>
+    <string name="settings_boot_format_summary">选择已修补的 Boot 镜像文件输出格式\n若要通过 fastboot/download 模式刷入，请选择 .img 格式；若要通过 Odin 刷入，则选择 .img.tar\n</string>
 
     <string name="settings_core_only_title">Magisk 核心功能模式</string>
     <string name="settings_core_only_summary">仅启用核心功能，所有模块将不会被载入。MagiskSU、MagiskHide 和 systemless hosts 仍会持续运作</string>
@@ -144,7 +160,7 @@
     <string name="superuser_notification">超级用户通知</string>
     <string name="request_timeout_summary">%1$s 秒</string>
     <string name="settings_su_reauth_title">更新后重新认证</string>
-    <string name="settings_su_reauth_summary">应用程序更新后，重新认证超级用户授权</string>
+    <string name="settings_su_reauth_summary">应用更新后重新认证超级用户权限</string>
 
     <string name="multiuser_mode">多用户模式</string>
     <string name="settings_owner_only">仅设备所有者</string>
